# bit-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bin-utils.h  bit-utils.cpp  bit-utils.h  library.json  library.properties  platformio.ini
include/: bit-utils.h
src/: bit-utils.cpp
test/: bit_utils_test.cpp  dummy_test.cpp
tests/: CMakeLists.txt  bit_utils_test.cpp
